# MediaDemo

./: build.gradle  config.gradle  readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/audFile/: standard16k.pcm
app/src/main/cpp/: CMakeLists.txt  Common.h  JniImp.cpp
app/src/main/cpp/Cam/: Cam2Wrapper.cpp  Cam2Wrapper.h
app/src/main/cpp/audio/: OpenslWrapper.cpp  OpenslWrapper.h
app/src/main/cpp/codec/: MediaCodecWrapper.cpp  MediaCodecWrapper.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
app/src/main/cpp/egl/: EglCore.cpp  EglSurfaceBase.h
app/src/main/cpp/looper/: GLRenderLooper.cpp  GLRenderLooper.h  looper.cpp
app/src/main/cpp/render/: BaseGLRender.h  EGLRender.cpp  EGLRender.h  EglRender.cpp  EglRender.h  GLCameraRender.cpp  GLCameraRender.h  GLSampleBase.h  MediaRecorderContext.cpp  MediaRecorderContext.h  MyGLRenderApps.cpp  MyGLRenderApps.h  MyGLRenderContext.cpp  MyGLRenderContext.h  MyGLRenderTests.cpp  MyGLRenderTests.h  MyRender.cpp  MyRender.h  NV21TextureMapSample.cpp  NV21TextureMapSample.h  VideoRender.h
app/src/main/cpp/render/samples/: FBOSample.h  GLSampleBase.h  MyRender.cpp  MyRender.h  NV21TextureMapSample.cpp  SharedEGLContextSample.cpp  SharedEGLContextSample.h  TextureMapSample.cpp  TriangleSample.cpp  TriangleSample.h  VaoSample.cpp
app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h  ImageDef.h  ToolUnits.cpp  ToolUnits.h
app/src/main/res/layout/: activity_audio.xml  activity_cam.xml  activity_main.xml  activity_mediacodec.xml  content_main.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
(+35 files in other folders)
